# ycxt

./: README.md
backend/: pyproject.toml
backend/app/: dependencies.py  main.py  storage.py
backend/app/api/: router.py  upload.py
backend/app/api/routes/: messages.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: device.py  message.py  prediction.py
backend/app/schemas/: message.py
backend/app/services/: analysis.py  importer.py
backend/app/tasks/: __init__.py  scheduler.py
backend/tests/: conftest.py  test_analysis.py  test_api.py  test_upload_api.py
frontend/: .gitignore  README.md  index.html  package.json  playwright.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: DeviceStatusCard.tsx  MessageTable.tsx  Navigation.tsx  PredictionHint.tsx  UploadPanel.tsx  VisualizationPanel.tsx
frontend/src/pages/: DashboardPage.tsx  MessagesPage.tsx
frontend/src/services/: basApi.ts
frontend/src/state/: dataStore.ts  types.ts
frontend/tests/: UploadPanel.test.tsx  core.spec.ts
